<resources>
    <string name="app_name">Manga Reader 01</string>
    <string name="text_search_comic">Search comics…</string>
    <string name="text_home">Home</string>
    <string name="text_trending">Trending</string>
    <string name="text_my_comics">My Comics</string>
    <string name="text_read_now">Read now >></string>
    <string name="text_manga_cover">Manga Cover</string>
    <string name="string_various_artist">Various Artist</string>
    <string name="text_summary">Summary</string>
    <string name="text_rating">(%.2f/5)</string>
    <string name="text_chapters">Chapters</string>
    <string name="text_load_more">Load more…</string>
    <string name="title_most_viewed">Most viewed</string>
    <string name="title_hot">Hot updates</string>
    <string name="title_last_release">Last release</string>
    <string name="text_current_page_number">Page %d of %d</string>
</resources>
