<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_8">
    <ImageView
            android:id="@+id/imageMangaItemCover"
            tools:src="@color/color_primary"
            android:layout_width="@dimen/dp_75"
            android:layout_height="@dimen/dp_105"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/text_manga_cover"
            tools:ignore="PrivateResource"/>
    <TextView
            android:id="@+id/textMangaItemTitle"
            tools:text="@string/app_name"
            android:textColor="@color/color_red"
            android:textStyle="bold"
            android:textSize="@dimen/sp_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_8"
            app:layout_constraintTop_toTopOf="@id/imageMangaItemCover"
            app:layout_constraintStart_toEndOf="@id/imageMangaItemCover"/>
    <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonMangaItemRead"
            android:text="@string/text_read_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
