<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_white">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.detail.DetailFragment">
        <ImageView
                android:id="@+id/imageBackComicCover"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/text_manga_cover"
                app:layout_constraintDimensionRatio="7:3"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        <ImageView
                android:id="@+id/imageComicCover"
                tools:src="@mipmap/ic_launcher"
                android:layout_width="@dimen/dp_128"
                android:layout_height="@dimen/dp_128"
                android:scaleType="centerCrop"
                android:background="@drawable/bg_white_rounded_2"
                android:elevation="@dimen/dp_2"
                android:padding="@dimen/dp_4"
                android:contentDescription="@string/text_manga_cover"
                app:layout_constraintStart_toStartOf="@id/imageBackComicCover"
                app:layout_constraintEnd_toEndOf="@id/imageBackComicCover"
                app:layout_constraintTop_toBottomOf="@id/imageBackComicCover"
                app:layout_constraintBottom_toBottomOf="@id/imageBackComicCover"
                tools:ignore="UnusedAttribute"/>
        <TextView
                android:id="@+id/textMangaTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:textSize="@dimen/sp_20"
                android:textStyle="bold"
                android:textColor="@color/color_black"
                android:layout_margin="@dimen/dp_8"
                app:layout_constraintTop_toBottomOf="@id/imageComicCover"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center_horizontal"/>
        <RatingBar
                android:id="@+id/barRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                style="?android:attr/ratingBarStyleSmall"
                tools:rating="4.3"
                android:stepSize="0.1"
                android:isIndicator="true"
                android:layout_marginTop="@dimen/dp_2"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textMangaTitle"
                app:layout_constraintEnd_toStartOf="@id/textRating"
                tools:ignore="UnusedAttribute"/>
        <TextView
                android:id="@+id/textRating"
                android:textColor="@color/color_red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_2"
                app:layout_constraintStart_toEndOf="@id/barRating"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/barRating"
                app:layout_constraintBottom_toBottomOf="@id/barRating"/>
        <ImageView
                android:id="@+id/imageIconAuthor"
                android:src="@drawable/ic_verified_user_black_24dp"
                android:tint="@color/color_green"
                android:layout_width="@dimen/sp_18"
                android:layout_height="@dimen/sp_18"
                android:layout_margin="@dimen/dp_4"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintTop_toBottomOf="@id/barRating"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/textAuthor"
                android:contentDescription="@string/app_name"/>
        <TextView
                android:id="@+id/textAuthor"
                android:text="@string/string_various_artist"
                android:textColor="@color/color_green"
                tools:text="@string/app_name"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RtlCompat,UnusedAttribute"
                app:layout_constraintTop_toTopOf="@id/imageIconAuthor"
                app:layout_constraintBottom_toBottomOf="@id/imageIconAuthor"
                app:layout_constraintStart_toEndOf="@id/imageIconAuthor"
                app:layout_constraintEnd_toEndOf="parent"/>
        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerTags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_16"
                app:layout_constraintTop_toBottomOf="@id/imageIconAuthor"
                app:layout_constraintStart_toStartOf="@id/textSummary"
                app:layout_constraintEnd_toEndOf="@id/textSummary"/>
        <TextView
                android:id="@+id/textSummary"
                tools:text="@string/app_name"
                android:maxLines="15"
                android:background="@drawable/bg_border_rounded"
                android:breakStrategy="simple"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_32"
                android:layout_marginHorizontal="@dimen/dp_16"
                android:layout_marginBottom="@dimen/dp_16"
                android:textAlignment="center"
                tools:ignore="UnusedAttribute"
                android:padding="@dimen/dp_16"
                app:layout_constraintTop_toBottomOf="@id/recyclerTags"
                app:layout_constraintBottom_toTopOf="@id/recyclerChapters"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
                android:id="@+id/textSummaryTitle"
                android:text="@string/text_summary"
                android:textSize="@dimen/sp_18"
                android:textStyle="bold"
                android:background="@color/color_white"
                android:paddingHorizontal="@dimen/dp_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/textSummary"
                app:layout_constraintBottom_toTopOf="@id/textSummary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="UnusedAttribute"/>
        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerChapters"
                android:background="@drawable/bg_border_rounded"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_8"
                android:paddingBottom="@dimen/dp_16"
                android:layout_marginVertical="@dimen/dp_8"
                android:nestedScrollingEnabled="false"
                app:layout_constraintStart_toStartOf="@id/textSummary"
                app:layout_constraintEnd_toEndOf="@id/textSummary"
                app:layout_constraintTop_toBottomOf="@id/textSummary"
                app:layout_constraintBottom_toTopOf="@id/textLoadMore"
                tools:ignore="UnusedAttribute"/>
        <TextView
                android:id="@+id/textChaptersTitle"
                android:text="@string/text_chapters"
                android:textSize="@dimen/sp_18"
                android:textStyle="bold"
                android:background="@color/color_white"
                android:paddingHorizontal="@dimen/dp_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/recyclerChapters"
                app:layout_constraintBottom_toTopOf="@id/recyclerChapters"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="UnusedAttribute"/>
        <ImageView
                android:id="@+id/imageLoadMoreIcon"
                android:src="@drawable/ic_arrow_drop_down_black_24dp"
                android:tint="@color/color_red"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintTop_toTopOf="@id/textLoadMore"
                app:layout_constraintBottom_toBottomOf="@id/textLoadMore"
                app:layout_constraintStart_toStartOf="@id/recyclerChapters"
                app:layout_constraintEnd_toStartOf="@id/textLoadMore"
                tools:ignore="ContentDescription"/>
        <TextView
                android:id="@+id/textLoadMore"
                android:text="@string/text_load_more"
                android:textColor="@color/color_red"
                android:textStyle="bold"
                android:background="@color/color_white"
                android:gravity="center"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_8"
                android:layout_marginBottom="@dimen/dp_8"
                app:layout_constraintStart_toEndOf="@id/imageLoadMoreIcon"
                app:layout_constraintEnd_toEndOf="@id/recyclerChapters"
                app:layout_constraintTop_toBottomOf="@id/recyclerChapters"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:ignore="UnusedAttribute"/>
        <View
                android:id="@+id/viewLoading"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/color_white"
                app:layout_constraintTop_toBottomOf="@id/textMangaTitle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        <ProgressBar
                android:id="@+id/barLoading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                app:layout_constraintTop_toTopOf="@id/viewLoading"
                app:layout_constraintBottom_toBottomOf="@id/viewLoading"
                app:layout_constraintStart_toStartOf="@id/viewLoading"
                app:layout_constraintEnd_toEndOf="@id/viewLoading"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
